--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,9 @@
 events {
-    worker_connections 1024
+    worker_connections  1024;
 }
 
 http {
-    server_tockens off;
+    server_tokens off;
     charset utf-8;
 
     server {
@@ -12,7 +12,7 @@ http {
         server_name _;
 
         location / {
-            proxy_pass localhost:3000;
+            proxy_pass http://localhost:3000/;
         }
     }
 }
